navbar collapse bug fixed

--- a/src/index.css
+++ b/src/index.css
@@ -60,6 +60,7 @@ Link button {
 .singleBeerContainer h1 {
   text-align: center;
   margin-bottom: 5%;
+  margin-top: 10%;
 }
 
 .singleBeerContainer h4 {
@@ -70,6 +71,18 @@ Link button {
 @media only screen and (max-width: 1000px) {
   .search {
     margin-top: 10%;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  .singleBeerContainer h1 {
+    text-align: center;
+    margin-bottom: 5%;
+    margin-top: 15%;
+  }
+  .About{
+    text-align: center;
+    margin-top: 16% !important;
   }
 }
 
@@ -124,5 +137,10 @@ Link button {
   right: 80px;
   top: 10px;
   
+}
+
+.singleBeerFix {
+  height: fit-content;
+
 }
 
